<resources>
    <string name="app_name">Scrollable News</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="deleting">Deleting&#8230;</string>
    <string name="preview">Preview</string>
    <string name="confirmation">Confirmation</string>
    <string name="import_action">Import</string>
    <string name="export_action">Export</string>
    <string name="add_action">Add</string>
    <string name="reload_action">Reload</string>
    <string name="name_conflict_import_warning">but some name conflicts were detected</string>
    <string name="whats_new_option_text">What\'s new?</string>
    <string name="loading">Loading&#8230;</string>
    <string name="activity_story_list">Story list</string>
    <string name="activity_story_details">Read</string>
    <string name="activity_file_picker">Choose file</string>
    <string name="activity_color_picker">Choose color</string>
    <string name="activity_theme_details">Edit theme</string>
    <string name="activity_behaviour_details">Edit behaviour</string>
    <string name="object_behaviour">behaviour</string>
    <string name="object_theme">theme</string>
    <string name="object_feed">feed</string>
    <string name="location">Location</string>
    <string name="cant_read_folder">Folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
    <string name="main_tab_feeds">Feeds</string>
    <string name="main_tab_themes">Themes</string>
    <string name="main_tab_behaviours">Behaviours</string>
    <string name="main_tab_favorites">Favorites</string>
    <string name="main_tab_settings">Settings</string>
    <string name="main_tab_stats">Stats</string>
    <string name="main_tab_about">About</string>
    <string name="config_widget_not_saved">Configuration NOT saved!</string>
    <string name="config_widget_validation_errors">Validation errors</string>
    <string name="config_widget_select_behaviour">Select behaviour</string>
    <string name="config_widget_select_theme">Select theme</string>
    <string name="config_widget_select_feeds">Select feeds</string>
    <string name="config_widget_empty_collection">No %1$s found! Please create at least one %2$s first.</string>
    <string name="config_widget_behaviour_not_set">Behaviour is not set</string>
    <string name="config_widget_theme_not_set">Theme is not set</string>
    <string name="config_widget_no_feed_selected">No feed is selected</string>
    <string name="defaults_dark_theme">Default dark theme</string>
    <string name="defaults_light_theme">Default light theme</string>
    <string name="defaults_widget_title">Latest news (%d)</string>
    <string name="defaults_behaviour_name">New behaviour</string>
    <string name="distribute_evenly">Distribute evenly</string>
    <string name="distribute_evenly_summary">Distribute stories evenly between feeds</string>
    <string name="theme_name">Theme name</string>
    <string name="theme_name_summary">Required theme name. Must be unique</string>
    <string name="screen_global_appearance">Global appearance</string>
    <string name="screen_global_appearance_summary">Tweak global appearance</string>
    <string name="widget_background_color">Background</string>
    <string name="widget_background_color_summary">Widget background color</string>
    <string name="widget_background_color_add">Choose color</string>
    <string name="widget_background_opacity">Opacity</string>
    <string name="widget_background_opacity_summary">Widget background opacity (0 is transparent, 255 is opaque)</string>
    <string name="widget_background_opacity_add">Edit opacity</string>
    <string name="widget_rounded_corners">Rounded corners</string>
    <string name="widget_rounded_corners_summary">Use rounded corners</string>
    <string name="widget_show_title">Show header</string>
    <string name="widget_show_title_summary">Show the widget title bar</string>
    <string name="widget_num_columns">Number of columns</string>
    <string name="widget_num_columns_summary">If you want the news to be presented in a grid</string>
    <string name="date_format">Date format</string>
    <string name="date_format_summary">How dates should be formatted</string>
    <string name="date_format_add">Edit date format</string>
    <string name="widget_title_color">Header color</string>
    <string name="widget_title_color_summary">Widget title color</string>
    <string name="story_title_appearance">Story title</string>
    <string name="story_title_color">Font color</string>
    <string name="story_title_color_summary">Title base color. Might be overridden by individual feeds.</string>
    <string name="story_title_font_size">Font size</string>
    <string name="story_title_font_size_summary">Size of the story title</string>
    <string name="story_title_font_size_add">Set font size</string>
    <string name="story_title_uppercase">Uppercase</string>
    <string name="hide_story_title">Hide title</string>
    <string name="hide_story_title_summary">Check to hide the story title</string>
    <string name="story_title_uppercase_summary">Uppercase story title</string>
    <string name="story_title_max_lines">Line count</string>
    <string name="story_title_max_lines_summary">Story title max number of lines</string>
    <string name="story_title_max_lines_add">Max line count</string>
    <string name="story_description_appearance">Story description</string>
    <string name="story_description_appearance_summary">Tweak story description appearance</string>
    <string name="story_description_color">Font color</string>
    <string name="story_description_color_summary">Color of the story description</string>
    <string name="story_description_font_size">Font size</string>
    <string name="story_description_font_size_summary">Size of the story description</string>
    <string name="story_description_font_size_add">Set font size</string>
    <string name="story_description_max_words">Word count</string>
    <string name="story_description_max_words_summary">Story description max number of words</string>
    <string name="story_description_max_words_add">Max word number</string>
    <string name="story_footer_appearance">Story footer</string>
    <string name="story_footer_appearance_summary">Tweak story footer appearance</string>
    <string name="story_footer_show">Visible</string>
    <string name="story_footer_show_summary">Show the story footer</string>
    <string name="story_footer_uppercase">Uppercase</string>
    <string name="story_footer_uppercase_summary">Uppercase story footer</string>
    <string name="story_footer_font_size">Font size</string>
    <string name="story_footer_font_size_summary">Size of the story footer</string>
    <string name="story_footer_font_size_add">Set font size</string>
    <string name="story_author_color">Author font color</string>
    <string name="story_author_color_summary">Color of the story author</string>
    <string name="story_date_color">Date font color</string>
    <string name="story_date_color_summary">Color of the story date</string>
    <string name="layout_tweak">Layout tweak</string>
    <string name="layout_tweak_summary">Tweak the story appearance</string>
    <string name="story_layout">Layout</string>
    <string name="story_layout_summary">Layout to use</string>
    <string name="thumbnail_size">Thumbnail size</string>
    <string name="thumbnail_size_summary">Width of the thumbnails if shown</string>
    <string name="behaviour_name">Behaviour name</string>
    <string name="behaviour_name_summary">Required behaviour name. Must be unique.</string>
    <string name="story_count">Story count</string>
    <string name="story_count_summary">How many stories a single widget can hold</string>
    <string name="mobilizer_service">Mobilizer service</string>
    <string name="mobilizer_service_summary">Which mobilizer to use if any</string>
    <string name="builtin_browse">Builtin browser</string>
    <string name="builtin_browse_summary">Use the built in browser</string>
    <string name="force_author">Force author</string>
    <string name="force_author_summary">Use feed title in place of story author</string>
    <string name="read_stories">Hide read stories</string>
    <string name="read_stories_summary">Already read stories will be hidden</string>
    <string name="parse_story_body">Parse story body</string>
    <string name="parse_story_body_summary">Lookup thumbnails in the story body (heavy operation)</string>
    <string name="clear_before_load">Clear before loading</string>
    <string name="clear_before_load_summary">Clear stories before loading new ones</string>
    <string name="refresh_interval">Refresh interval</string>
    <string name="refresh_interval_summary">How often the widgets should be refreshed (expressed in minutes)</string>
    <string name="auto_mark_read">Auto mark as read</string>
    <string name="auto_mark_read_summary">Automatically mark stories as read</string>
    <string name="wifi_only">WIFI only</string>
    <string name="wifi_only_summary">Only update if WIFI is on</string>
    <string name="fetch_thumbnails">Eagerly fetch thumbnails</string>
    <string name="fetch_thumbnails_summary">Load thumbnails as soon as possible</string>
    <string name="image_min_width">Embedded image min width</string>
    <string name="image_min_width_summary">Minimal image width to consider</string>
    <string name="debug_mode">Debug</string>
    <string name="debug_mode_summary">Enable debug mode</string>
    <string name="prefer_shape_over_ninepatch">Prefer shape over 9-patches</string>
    <string name="prefer_shape_over_ninepatch_summary">Used when rounded corners option is active. Better graphics and stretchability but may not render correctly on all devices.</string>
    <string name="launch_main_activity">Edit settings</string>
    <string name="launch_main_activity_summary">Edit themes, behaviours and global settings and manage feeds</string>
    <string name="widget_configuration">Widget configuration</string>
    <string name="widget_title">Title</string>
    <string name="widget_title_summary" formatted="false">The widget title. Use %d to insert the refresh date</string>
    <string name="behaviour">Behaviour</string>
    <string name="behaviour_summary">Defines how this widget will behaves</string>
    <string name="theme">Theme</string>
    <string name="theme_summary">Defines how this widget will look like</string>
    <string name="feeds">Feeds</string>
    <string name="feeds_summary">Which feeds to display</string>
    <string name="feed_search">Search</string>
    <string name="feed_lookup">Lookup</string>
    <string name="v_212_title">Version 2.1.2 (2012&#8211;11&#8211;04)</string>
    <string name="v_212_changes"> 
- Add 2 and 3- column layout\r\n
	</string>
    <string name="v_210_title">Version 2.1.0 (2012&#8211;10&#8211;27)</string>
    <string name="v_210_changes"> 
- Fix embedded browser menu\r\n
- Google news thumbnail hack (url fix)\r\n
- Stop loading option (reader menu)\r\n
- Support media:content thumbnail\r\n
- Fix media:description incorrect use\r\n
- Add the option to hide story title\r\n
- Get rid of the hideous orb icon\r\n
- Add "mark all read" option"\r\n
- Tweak main settings activity\r\n 
   </string>
    <string name="credits">Credits</string>
    <string name="credits_text">
- ViNNNtalik@xda: russian translation\r\n
    </string>
</resources>