<?xml version="1.0" encoding="utf-8"?>
<ScrollView	android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:padding="10dp"
	    android:orientation="vertical">
	
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/v_212_title"
	        android:textStyle="bold"
	        android:textSize="14sp" 
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="10dp"/>
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/v_212_changes" 
	        android:textSize="14sp"
	        android:paddingLeft="10dip"
	        android:paddingRight="10dip"/>
	    
	    <FrameLayout android:layout_width="fill_parent"
					android:layout_weight="0.0" 
					android:layout_height="2dip" 
					android:background="@drawable/widget_list_divider"  
					android:layout_marginTop="10dp"/>
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/v_210_title"
	        android:textStyle="bold"
	        android:textSize="14sp" 
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="10dp"/>
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/v_210_changes" 
	        android:textSize="14sp"
	        android:paddingLeft="10dip"
	        android:paddingRight="10dip"/>
	    
	    <FrameLayout android:layout_width="fill_parent"
					android:layout_weight="0.0" 
					android:layout_height="2dip" 
					android:background="@drawable/widget_list_divider"  
					android:layout_marginTop="10dp"/>
	    
	    <!-- credits -->
	   	<TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/credits"
	        android:textStyle="bold"
	        android:textSize="14sp" 
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="10dp"/>
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/credits_text" />
	</LinearLayout>
</ScrollView>