<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@android:style/ButtonBar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/add_command"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:onClick="onThemeListCommandSelected"
        android:text="@string/add_action" />

    <Button
        android:id="@+id/import_command"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:onClick="onThemeListCommandSelected"
        android:text="@string/import_action" />

    <Button
        android:id="@+id/export_command"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:onClick="onThemeListCommandSelected"
        android:text="@string/export_action" />

</LinearLayout>